--- a/server/views/projects.ejs
+++ b/server/views/projects.ejs
@@ -1,10 +1,10 @@
 <%# services.ejs Wai Tung Wong 301222578 2022-10-14 %>
 <%# include header %> 
-<%- include partials/header.ejs %> 
+<%- include ('partials/header.ejs') %> 
 
 <body class="mainbody">
     <%# included the navigation bar %>
-    <%- include partials/navbar.ejs %> 
+    <%- include ('partials/navbar.ejs') %> 
     <br>
     <h3 class="left">Here are some of my projects:</h3>
     <br>
@@ -21,5 +21,5 @@
     <h4>This is a individual project that creating a web form that could verify all the user's inputs are qualified or not.</h4>
 </body>
 <%# include the Scripts & footer %>
-<%- include partials/footer.ejs %> 
+<%- include ('partials/footer.ejs') %> 
 </html>
