--- a/server/views/contact.ejs
+++ b/server/views/contact.ejs
@@ -1,10 +1,10 @@
 <%# contact.ejs Wai Tung Wong 301222578 2022-10-14 %>
 <%# include header %> 
-<%- include partials/header.ejs %> 
+<%- include ('partials/header.ejs') %> 
 
 <body class="mainbody">
     <%# included the navigation bar %>
-    <%- include partials/navbar.ejs %> 
+    <%- include ('partials/navbar.ejs') %> 
     <br>
     <table>
         <tr>
@@ -36,5 +36,5 @@
     </form>
 </body>
 <%# include the Scripts & footer %>
-<%- include partials/footer.ejs %> 
+<%- include ('partials/footer.ejs') %> 
 </html>
