--- a/server/views/services.ejs
+++ b/server/views/services.ejs
@@ -1,10 +1,10 @@
 <%# services.ejs Wai Tung Wong 301222578 2022-10-14 %>
 <%# include header %> 
-<%- include partials/header.ejs %> 
+<%- include ('partials/header.ejs') %> 
 
 <body class="mainbody">
     <%# included the navigation bar %>
-    <%- include partials/navbar.ejs %> 
+    <%- include ('partials/navbar.ejs') %> 
     <br>
     <h3 class="left">Here are the services that I provide:</h3><br>
     <ul>
@@ -17,5 +17,5 @@
     </ul>
 </body>
 <%# include the Scripts & footer %>
-<%- include partials/footer.ejs %> 
+<%- include ('partials/footer.ejs') %> 
 </html>
