--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -1,5 +1,5 @@
 <%-include ('../partials/header.ejs');%>
-<%-include ('../partials/main_nav.ejs');%>
+<%-include ('../partials/navbar.ejs');%>
   
 <main class="container">
     <!--message Area-->
@@ -57,6 +57,4 @@
                 </div>
     </main>
 
-  
-   <%-include ('../partials/bottom_nav.ejs');%>
 <%-include ('../partials/footer.ejs');%>   
