--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -1,3 +1,6 @@
+<%#  
+<%# register.ejs Wai Tung Wong 301222578 2022-10-21 %>
+
 <%-include ('../partials/header.ejs');%>
 <%-include ('../partials/navbar.ejs');%>
   
@@ -57,4 +60,4 @@
                 </div>
     </main>
 
-<%-include ('../partials/footer.ejs');%>   
+<%-include ('../partials/footer.ejs');%>   %>
