--- a/server/views/businessContact/add.ejs
+++ b/server/views/businessContact/add.ejs
@@ -1,7 +1,10 @@
+<%# add.ejs Wai Tung Wong 301222578 2022-10-21 %>
+
 <%-include ('../partials/header.ejs');%>
 <%-include ('../partials/navbar.ejs');%>
 
 <!--content for the Add page-->
+<body class="mainbody">
 <div class = "container">
     <div class = "row">
         <div class="offset-md-3 col-md-6">
@@ -16,11 +19,11 @@
                 </div>
 
                 <div class ="form group">
-                    <label for="numberTextField">Contact Number</label>
+                    <label for="phoneTextField">Contact Number</label>
                     <input type="text" class="form control"
-                    id="numberTextField"
+                    id="phoneTextField"
                     placeholder="Enter the Contact Number"
-                    name="number" required>
+                    name="phone" required>
                 </div>
 
                 <div class ="form group">
@@ -37,6 +40,7 @@
         </div>
         </div>
     </div>
+</body>
 
 <%- include('../partials/footer'); -%>
 
