--- a/server/views/businessContact/list.ejs
+++ b/server/views/businessContact/list.ejs
@@ -1,6 +1,9 @@
+<%# lsit.ejs Wai Tung Wong 301222578 2022-10-21 %>
+
 <%-include ('../partials/header.ejs');%>
 <%-include ('../partials/navbar.ejs');%>
 
+<body class="mainbody">
 <p>Welcome to <%= title %></p>
 <main class="container">
 <div class="row">
@@ -37,5 +40,6 @@
         </div>
     </div>
     </main>
+</body>
 
 <%- include('../partials/footer'); -%>
